--- a/src/app/usuario/pages/list-page/list-page.component.html
+++ b/src/app/usuario/pages/list-page/list-page.component.html
@@ -9,7 +9,7 @@
           type="button"
           class="btn btn-success m-1"
           data-toggle="modal"
-          data-target="#create-modal-user"
+          data-target="#modal-user"
         >
           <i class="fa fa fa-add"></i> <span> +</span>
         </button>
@@ -45,7 +45,7 @@
                 class="fa fa-edit"
                 (click)="edit(row.id)"
                 data-toggle="modal"
-                data-target="#edit-modal-user"
+                data-target="#modal-user"
               ></i>
               |
               <i class="fa fa-trash-o" (click)="delete(row.id)"></i>
@@ -59,4 +59,60 @@
 
 <!-- Filter Datatable Options Ends -->
 
-<app-register-user-page></app-register-user-page>
+<!-- Modal Crear/Editar -->
+<div class="modal fade" id="modal-user">
+	<div class="modal-dialog modal-dialog-centered">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <h5 class="modal-title">{{titulo}}</h5>
+		  <button
+			type="button"
+			class="close"
+			data-dismiss="modal"
+			aria-label="Close"
+		  >
+			<span aria-hidden="true">&times;</span>
+		  </button>
+		</div>
+		<div class="modal-body">
+		  <form action="" [formGroup]="userForm" (ngSubmit)="onSubmit()">
+			<div class="form-group">
+			  <label for="input-1">Usuario</label>
+			  <input
+				type="text"
+				class="form-control"
+				id="input-1"
+				placeholder="Ingresa tu usuario"
+				formControlName="usuario"
+			  />
+			</div>
+			<div class="form-group">
+			  <label for="input-2">Email</label>
+			  <input
+				type="text"
+				class="form-control"
+				id="input-2"
+				placeholder="Ingresa tu e-mail"
+				formControlName="email" 
+			  />
+			</div>
+			<div class="form-group">
+			  <label for="input-3">Contraseña</label>
+			  <input
+				type="text"
+				class="form-control"
+				id="input-3"
+				placeholder="Ingresa tu Contraseña"
+			  />
+			</div>
+			<div class="form-group">
+			  <button type="submit" class="btn btn-primary px-5" (click)="onSubmit()">
+				<i class="icon-save"></i> Crear
+			  </button>
+			</div>
+		  </form>
+		</div>
+	  </div>
+	</div>
+  </div>
+  
